fix handling of null arguments